message GrowOnlyCCounterAddMessage {
    required uint32 toAdd = 1;
    required uint32 prOld = 2;
    required uint32 idCounter = 3;
}

message GrowOnlyCCounterResetEntry {
  required uint32 v = 1;
  required uint32 idCounter = 2;
}

message GrowOnlyCCounterResetMessage {
    map<string, GrowOnlyCCounterResetEntry> V = 1;
}

message GrowOnlyCCounterMessage {
    oneof data {
        GrowOnlyCCounterAddMessage add = 1;
        GrowOnlyCCounterResetMessage reset = 2;
    }
}

message GrowOnlyCCounterSaveEntry {
  required uint32 p = 1;
  required uint32 n = 2;
  required uint32 idCounter = 3;
}

message GrowOnlyCCounterSave {
  map<string, GrowOnlyCCounterSaveEntry> M = 1;
}
